--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <div class="language">
             <figure class="language__img--wrapper">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" class="language__img">
+              <img src="https://e7.pngegg.com/pngimages/893/87/png-clipart-cascading-style-sheets-logo-css3-html-css3-logo-blue-angle.png" class="language__img">
             </figure>
             <span class='language__name'>HTML</span>
           </div>
