added weather app.

--- a/index.html
+++ b/index.html
@@ -216,28 +216,28 @@
             </div>
           </li>
 
-<!--          <li class='project'>-->
-<!--            <div class='project__wrapper'>-->
-<!--              <img src='./assets/loopit.png' class='project__img' alt=''>-->
-<!--              <div class='project__description'>-->
-<!--                <h3 class='project__description&#45;&#45;title'>Car sales project</h3>-->
-<!--                <h4 class='project__description&#45;&#45;sub-title'>-->
-<!--                  HTML, CSS, JavaScript, Vue, Vuex-->
-<!--                </h4>-->
-<!--                <p class='project__description&#45;&#45;para'>-->
-<!--                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore illum non provident quos soluta vel.-->
-<!--                </p>-->
-<!--                <div class='project__description&#45;&#45;links'>-->
+          <li class='project'>
+            <div class='project__wrapper'>
+              <img src='./assets/weather_app.png' class='project__img' alt=''>
+              <div class='project__description'>
+                <h3 class='project__description--title'>Weather app</h3>
+                <h4 class='project__description--sub-title'>
+                  HTML, CSS, JavaScript, Express.js, Handlebars
+                </h4>
+                <p class='project__description--para'>
+                  Weather app that gets live weather data from entered location.
+                </p>
+                <div class='project__description--links'>
 <!--                  <a href='#' class='project__description&#45;&#45;link'>-->
 <!--                    <i class='fab fa-github'></i>-->
 <!--                  </a>-->
-<!--                  <a href='#' class='project__description&#45;&#45;link'>-->
-<!--                    <i class='fas fa-link'></i>-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </li>-->
+                  <a href='http://194-realm.xyz/' target="_blank" class='project__description--link'>
+                    <i class='fas fa-link'></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
 
 <!--          <li class='project'>-->
 <!--            <div class='project__wrapper'>-->
