--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
       <div class="personal__logo">Žilvinas Kančys</div>
 
       <ul class="nav__link--list">
-        <li>
+        <li class="nav__link">
           <a href="#languages" class="
           nav__link--anchor
           link__hover-effect
           link__hover-effect-black">Languages</a>
         </li>
 
-        <li>
+        <li class="nav__link">
           <a href="#projects" class="
           nav__link--anchor
           link__hover-effect
           link__hover-effect-black">Projects</a>
         </li>
 
-        <li>
+        <li class="nav__link">
           <a href="" class="
           nav__link--anchor
           nav__link--anchor-primary">Contact</a>
@@ -45,7 +45,7 @@
             </figure>
 
             <h1 class="about-me__info--title">
-              Hey, I'm <span class="text--purple">Žilvinas</span> 👋
+              Hey, I'm <span class="text--purple">Žilvinas</span>&nbsp;<span class="wave">👋</span>
             </h1>
 
             <p class="about-me__info--para">
@@ -53,15 +53,15 @@
             </p>
 
             <div class="about-me__links">
-              <a href="" class="about-me__link">
+              <a href="https://www.linkedin.com/in/%C5%BEilvinas-kan%C4%8Dys-31abb4177/" class="about-me__link">
                 <i class="fab fa-linkedin"></i>
               </a>
 
-              <a href="" class="about-me__link">
+              <a href="https://github.com/194pp" class="about-me__link">
                 <i class="fab fa-github-square"></i>
               </a>
 
-              <a href="" class="about-me__link">
+              <a href="mailto:zilvinas111@gmail.com" class="about-me__link">
                 <i class="far fa-envelope"></i>
               </a>
 
@@ -267,7 +267,7 @@
   </section>
   <footer>
     <div class='row footer__row'>
-      <a href='#'>
+      <a href='#' class="footer__anchor">
         <figure class='footer__logo'>
           <img src='./assets/logo.png' class='footer__logo--img' alt='logo'>
         </figure>
