Using new React logo.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
           <div class="language">
             <figure class="language__img--wrapper">
-              <img src="https://ionicframework.com/docs/assets/icons/logo-react-icon.png" class="language__img">
+              <img src="assets/react_logo.png" class="language__img">
             </figure>
             <span class='language__name'>React</span>
           </div>
