--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class='row'>
         <h1 class='section__title'>Here are some of my <span class='text--purple'>projects</span></h1>
         <ul class='project__list'>
-          <li class='project'>
+          <!-- <li class='project'>
             <div class='project__wrapper'>
               <img src='./assets/helloworld.png' class='project__img' alt=''>
               <div class='project__description'>
@@ -157,7 +157,7 @@
                 </h4>
                 <p class='project__description--para'>
                   :DD
-                </p>
+                </p> -->
 <!--                <div class='project__description&#45;&#45;links'>-->
 <!--                  <a href='https://www.github.com/yourlink' target='_blank' class='project__description&#45;&#45;link'>-->
 <!--                    <i class='fab fa-github'></i>-->
@@ -166,9 +166,9 @@
 <!--                    <i class='fas fa-link'></i>-->
 <!--                  </a>-->
 <!--                </div>-->
-              </div>
+              <!-- </div>
             </div>
-          </li>
+          </li> -->
 
           <li class='project'>
             <div class='project__wrapper'>
