Replaced weather app link to a dead link (project no longer being hosted).

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 <!--                  <a href='#' class='project__description&#45;&#45;link'>-->
 <!--                    <i class='fab fa-github'></i>-->
 <!--                  </a>-->
-                  <a href='http://194-realm.xyz/' target="_blank" class='project__description--link'>
+                  <a href='#' target="_blank" class='project__description--link'>
                     <i class='fas fa-link'></i>
                   </a>
                 </div>
