--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <i class="far fa-envelope"></i>
               </a>
 
-              <a href="" class="about-me__link">
+              <a href="assets/ŽilvinasKančys_CV.pdf" class="about-me__link">
                 <i class="fas fa-file-pdf"></i>
               </a>
             </div>
