--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </li>
 
         <li class="nav__link">
-          <a href="" class="
+          <a href="mailto:zilvinas111@gmail.com" class="
           nav__link--anchor
           nav__link--anchor-primary">Contact</a>
         </li>
