Added VKS project.

--- a/index.html
+++ b/index.html
@@ -238,6 +238,33 @@
               </div>
             </div>
           </li>
+
+          <li class='project'>
+            <div class='project__wrapper'>
+              <img src='./assets/weather_app.png' class='project__img' alt=''>
+              <div class='project__description'>
+                <h3 class='project__description--title'>VKS admin page</h3>
+                <h4 class='project__description--sub-title'>
+                  React, CSS modules, Express.js, Mongoose, JWT
+                </h4>
+                <p class='project__description--para'>
+                  Full-stack application consisting of frontend written in React, backend in Express and to wrap things up all the user data is stored in MongoDB via Mongoose ORM.
+                  App's purpose is to create, modify and delete (archive) users. CodeAcademy course final project.
+                </p>
+                <div class='project__description--links'>
+                  <a href='https://github.com/194pp/code-academy_final-asignment' class='project__description&#45;&#45;link'>-->
+                    <i class='fab fa-github'></i>
+                  </a>
+                  <a href='https://github.com/194pp/code-academy_final-asignment__API' class='project__description&#45;&#45;link'>-->
+                    <i class='fab fa-github'></i>
+                  </a>
+                  <a href='http://5stack.space:3000/' target="_blank" class='project__description--link'>
+                    <i class='fas fa-link'></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
