Fixed VKS image.

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
           <li class='project'>
             <div class='project__wrapper'>
-              <img src='./assets/weather_app.png' class='project__img' alt=''>
+              <img src='./assets/vks.png' class='project__img' alt=''>
               <div class='project__description'>
                 <h3 class='project__description--title'>VKS admin page</h3>
                 <h4 class='project__description--sub-title'>
