fixed comment bug.

--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                   App's purpose is to create, modify and delete (archive) users. CodeAcademy course final project.
                 </p>
                 <div class='project__description--links'>
-                  <a href='https://github.com/194pp/code-academy_final-asignment' class='project__description&#45;&#45;link'>-->
+                  <a href='https://github.com/194pp/code-academy_final-asignment' class='project__description&#45;&#45;link'>
                     <i class='fab fa-github'></i>
                   </a>
-                  <a href='https://github.com/194pp/code-academy_final-asignment__API' class='project__description&#45;&#45;link'>-->
+                  <a href='https://github.com/194pp/code-academy_final-asignment__API' class='project__description&#45;&#45;link'>
                     <i class='fab fa-github'></i>
                   </a>
                   <a href='http://5stack.space:3000/' target="_blank" class='project__description--link'>
